<LinearLayout
android:id="@+id/main"
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/white">

<!-- Toolbar -->
<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/purple"
    android:titleTextColor="@android:color/white"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/textBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenida"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/input_morado"
        android:hint="@string/input"
        android:padding="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/primary_button"
        android:text="@string/continuar"
        android:textColor="@color/white"/>

</LinearLayout>

</LinearLayout>