<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple"
        android:titleTextColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/textInicial"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/avatar"
            android:gravity="center"
            android:text="M"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textSaludo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saludo"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_bienvenida"
            android:textColor="@color/grey"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/secondary_button"
            android:text="@string/volver"
            android:textColor="@color/purple"/>

    </LinearLayout>

</LinearLayout>